@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form col="2">
+    <image name="tryton-info" xexpand="0" xfill="0"/>
+    <label string="You can now load aditional translations to the system."
+        id="load" yalign="0.0" xalign="0.0" xexpand="1"/>
+    <field name="languages" colspan="2" widget="multiselection"/>
+</form>
