@@ -55,4 +55,8 @@ this repository contains the full copyright notices and license terms. -->
     <field name="p_sep_by_space"/>
     <label name="n_sep_by_space"/>
     <field name="n_sep_by_space"/>
+    <group id="buttons" colspan="6" col="-1">
+        <button name="load_translations" icon="tryton-launch"/>
+        <button name="unload_translations" icon="tryton-launch"/>
+    </group>
 </form>
