@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree editable="1">
+<tree>
     <field name="name" expand="1"/>
     <field name="code"/>
     <field name="direction"/>
     <field name="translatable"/>
+    <button name="load_translations"/>
 </tree>
