@@ -1,3 +1,4 @@
+* Add language configuration wizard
 * Allow copying attachments and notes to created records
 * Add link button on form
 * Support explicit delete and remove for saving and on_change xxx2Many
